@@ -6,11 +6,15 @@ plugins {
 
 repositories {
     // Use JCenter for resolving dependencies.
-    jcenter()
+    mavenCentral()
 
     // DBIS Archiva
     maven {
         url "https://archiva.dbis.rwth-aachen.de:9911/repository/internal/"
+    }
+
+    maven {
+        url "https://archiva.dbis.rwth-aachen.de:9911/repository/snapshots/"
     }
 }
 
@@ -20,7 +24,7 @@ dependencies {
 
     // las2peer bundle which is not necessary in the runtime path
     // compileOnly will be moved into the lib dir afterwards
-    compileOnly "i5:las2peer-bundle:${project.property('core.version')}"
+    implementation "i5:las2peer-bundle:${project.property('core.version')}"
 
     // Add service dependencies here
     // example:
@@ -48,7 +52,7 @@ dependencies {
 
 configurations {
     // This ensures las2peer is available in the tests, but won't be bundled
-    testCompile.extendsFrom compileOnly
+    testImplementation.extendsFrom implementation
 }
 
 jar {
@@ -72,14 +76,15 @@ application {
     archivesBaseName = group
 
     version = "${project.property('service.version')}"
-    mainClassName = "i5.las2peer.tools.L2pNodeLauncher"
+    mainClass.set("i5.las2peer.tools.L2pNodeLauncher")
     sourceCompatibility = "${project.property('java.version')}"
     targetCompatibility = "${project.property('java.version')}"
 }
 
 // put all .jar files into export/jars folder
 tasks.withType(Jar) {
-    destinationDir = file("$projectDir/export/jars")
+    duplicatesStrategy = 'include'
+    destinationDirectory = file("$projectDir/export/jars")
 }
 
 javadoc {
@@ -130,7 +135,7 @@ task startscripts {
 # this script is autogenerated by 'gradle startscripts'
 # it starts a las2peer node providing the service '${project.property('service.name')}.${project.property('service.class')}' of this project
 # pls execute it from the root folder of your deployment, e. g. ./bin/start_network.sh
-java -cp "lib/*" i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService\\(\\'${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}\\'\\) startWebConnector interactive
+java -cp "lib/*" --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService\\(\\'${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}\\'\\) startWebConnector interactive
 """ 
     new File("$rootDir/bin", "start_network.bat").text = """:: this script is autogenerated by 'gradle startscripts'
 :: it starts a las2peer node providing the service '${project.property('service.name')}.${project.property('service.class')}' of this project
@@ -140,7 +145,9 @@ cd %~p0
 cd ..
 set BASE=%CD%
 set CLASSPATH="%BASE%/lib/*;"
-java -cp %CLASSPATH% i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService('${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}') startWebConnector interactive
+set L2P_JAR_PATH="%BASE%/lib/las2peer-bundle-${project.property('core.version')}.jar"
+
+java -cp %CLASSPATH% -jar %L2P_JAR_PATH% --port 9011 --service-directory service uploadStartupDirectory startService('${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}') startWebConnector interactive
 pause
 """
 }
@@ -256,20 +263,4 @@ test {
 
 // Only required when using Eclipse:
 // configuration for eclipse (this allows to import the project as a gradle project in eclipse without any problems)
-eclipse {
-    classpath {
-      file {
-            whenMerged {
-                // change output directory for test, main, resources and default
-                def main = entries.find { it.path == "src/main/java" }
-                main.output = "output/main"
-
-                def test = entries.find { it.path == "src/test/java" }
-                test.output = "output/test"
-
-                def defaultEntry = entries.find { it.kind == "output" && it.path == "bin/default" }
-                defaultEntry.path = "output/default"
-            }
-        }
-    }
-}
+//
